<resources>
    <string name="app_name">GankArms</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="user_phone">请输入手机号码</string>
    <string name="user_code">请输入验证码</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">首页</string>
    <string name="title_live">直播</string>
    <string name="title_subscribe">订阅</string>
    <string name="title_shoot_off">拍客</string>
    <string name="title_mine">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="appbar_scroll_behavior">com.cbl.gankarms.widget.behavior.AppBarLayoutOverScrollViewBehavior</string>
</resources>
